[tool.poetry]
name = "surplus"
version = "2.2.0"
description = "Python script to convert Google Maps Plus Codes to iOS Shortcuts-like shareable text."
authors = ["Mark Joshwel <mark@joshwel.co>"]
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/markjoshwel/surplus"
keywords = ["pluscodes", "openlocationcode"]
packages = [
    {include = "surplus"}
]

[tool.poetry.dependencies]
python = "^3.11"
pluscodes = "^2022.1.3"
geopy = "^2.3.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.12.0"}
mypy = "^1.6.1"
isort = "^5.12.0"

[tool.poetry.scripts]
surplus = 'surplus:cli'
"s+" = 'surplus:cli'

[tool.black]
line-length = 90

[tool.isort]
line_length = 90
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
