[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "surplus"
dynamic = ["version"]
description = 'convert Plus Codes, coordinates or location strings to shareable text'
readme = "README.md"
requires-python = ">=3.11"
license = "Unlicense"
keywords = ["pluscodes", "openlocationcode"]
authors = [
  { name = "Mark Joshwel", email = "mark@joshwel.co" },
]
classifiers = [
  "Development Status :: 6 - Mature",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pluscodes~=2022.1.3",
  "geopy~=2.4.1",
]

[project.scripts]
surplus = "surplus:cli"
"s+" = "surplus:cli"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/.devbox",
]

[tool.hatch.build.targets.wheel]
packages = ["surplus"]

[project.urls]
Documentation = "https://github.com/markjoshwel/surplus#readme"
Issues = "https://github.com/markjoshwel/surplus/issues"
Source = "https://github.com/markjoshwel/surplus"
Changelog = "https://github.com/markjoshwel/surplus/releases"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.isort]
line_length = 100
profile = "black"

[tool.hatch.version]
path = "surplus/surplus.py"

[[tool.hatch.envs.all.matrix]]
python = ["3.11", "3.12"]

[tool.hatch.envs.default]
description = "default development environment"
dependencies = ["mypy", "isort"]

[tool.hatch.envs.default.scripts]
check = [
  "mypy *.py",
  "hatch fmt --check",
  "isort --check surplus"
]
format = [
  "hatch fmt -f",
  "isort surplus"
]

[tool.hatch.envs.docs]
detached = true
description = "env for generator documentation"
dependencies = [
  "mkdocs"
]
[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8000"
